--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "gatsby": "^3.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sweetalert2": "^10.15.5"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "prettier": "2.2.1"
   },
   "repository": {
